# vidsheet

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
backend/: config.py  models.py
backend/services/: analysis.py  image_gen.py  x_client.py  x_digest.py  youtube.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisResult.tsx  CostEstimate.tsx  EmptyState.tsx  Header.tsx  ImageResult.tsx  KeyInput.tsx  LoadingSteps.tsx  PoweredBy.tsx  SectionHeader.tsx  SourceTabs.tsx  UrlInput.tsx  XDigestResult.tsx  XFeedInputs.tsx
frontend/src/hooks/: usePipeline.ts  useXPipeline.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
tests/: test_models.py  test_youtube.py
