[project]
name = "vidsheet"
version = "0.4.0"
description = "YouTube and X feed content analysis with comic-book infographic generator"
requires-python = ">=3.12"

[tool.vercel.app]
path = "api/index.py:app"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
